--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,35 +1,5 @@
-:root {
-    --bg: #0d0c22;
-    --bgSoft: #2d2b42;
-    --text: white;
-    --textSoft: #e5e5e5;
-    --btn: #3673fd;
-  }
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-body {
-    background-color: var(--bg);
-    color: var(--text );
-}
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.container {
-    /* background-color: rebeccapurple; */
-    width: 1536px;
-    margin: auto;
-    padding-left: 50px;
-    padding-right: 50px;
-    min-height: 100vh; 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  
+ 
